fix bug on svg first element in partner Histo

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -90,8 +90,8 @@
 
 <div id="select-doubleChart">
     <div class="row">
-      <div id="partners-histogram-container" class="col-sm-12">
-        <div id="partners-histogram-container" class="partners-histogram" partners-histogram></div>
+      <div  class="col-sm-12">
+        <div id="partners-histogram-container"  partners-histogram></div>
       </div>
     </div>
   </div>
