--- a/client/css/style.css
+++ b/client/css/style.css
@@ -576,25 +576,15 @@ font-size: 1.1em;
   background-color: white;
 }
 
-.partners-histogram{
+.svgElement {
+  height: 100px;
+}
+#partners-histogram-container {
+  padding-top: 40px;
   max-height: 500px;
   overflow-y: scroll;
   overflow-x: hidden;
   overflow:auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-#partners-histogram-container {
-  /*overflow: scroll;*/
-  max-height: 500px;
-}
-
-#partners-histogram-container>svg {
-  padding-top: 40px;
-  /*max-height: 500px;*/
-  /*position: relative;*/
-  /*overflow: auto;*/
 }
 
 .partners-tooltip {
