title update on world & country views

--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -18,7 +18,7 @@
             <div class="line unavailable"></div> Unavailable data
           </div>
           <div class="legend-item">
-            Data expressed in <strong>{{actualCurrency}}</strong>
+            Data expressed in <strong>sterling pound</strong>
           </div>
         </div>
         <world-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></world-timeline>
