--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -51,13 +51,13 @@
     <div class="col-md-6">
       <h3 class="subtitle">Balance of trade of {{entities.sourceEntity.selected.RICname}} with partners, {{selectedMinDate}} – {{selectedMaxDate}} <i class="fa fa-info-circle"></i></h3>
       <div class="legend-item">
-          Average share in <strong>pourcentage</strong> on {{ordered.selected.name.value}}| Trade balance in <strong>sterling</strong>
+          {{ordered.selected.name.value}} in <strong>pourcentage</strong> | Trade balance in <strong>sterling</strong>
       </div>
         <div class="legend-item">
           <strong>Balance : </strong> (Exports - Imports) / (Exports + Imports)
         </div> 
         <div class="legend-item">
-          <strong>| Total | : </strong> Sum of the shares for the years available
+          <strong>| Total | : </strong> Trade share average for  available years
         </div> 
     </div>
     <div class="col-md-6 inline-select" style="float:right;">
