country view line chart change in percent (work in progress)

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -113,6 +113,10 @@
             <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>imports</label>
             <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>exports</label>
           </div>
+          <div class="btn-group pull-right" style="margin-right:30px;">
+            <label class="btn btn-sm btn-default" ng-model="conversion" btn-radio="'sterling'" uncheckable>Sterling</label>
+            <label class="btn btn-sm btn-default" ng-model="conversion" btn-radio="'value'" uncheckable>Pourcent</label>
+          </div>
       </div>
     </div>
   </div>
