data missing alert in bilateral view

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -1,6 +1,23 @@
+
 <div id="sticky-marker"></div>
 <div id="sticky-container">
 <div class="container">
+<div ng-show="missing" class="alert"> 
+  <div class="modal-body" >
+   <p>
+      There is <strong>no data available</strong> in the database for {{entities.sourceEntity.selected.RICname}}
+   </p>
+   <p>
+   between {{selectedMinDate}} and {{selectedMaxDate}}  
+   </p>
+    <p>
+      Choose another one or change date selection, thank you !
+   </p>
+  </div>
+  <div class="modal-footer">
+      <button class="btn btn-default" ng-click="ok()">OK</button>
+  </div>
+</div>
   <div class="row">
   	<div class="timeline-cont col-sm-12">
       <bilateral-title></bilateral-title>
