--- a/client/css/style.css
+++ b/client/css/style.css
@@ -68,6 +68,54 @@
     font-style: normal;
 }
 
+/* media query for small device */
+@media (min-height: 800px) {
+
+.sticky-container-fixed{
+  padding-top: 50px;
+  background-color: #FAFAFA;
+  position: fixed;
+  width: 100%;
+  margin: 0;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  -webkit-box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
+     -moz-box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
+          box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
+}
+
+.sticky-placeholder{
+  height: 150px;
+}
+
+}
+
+/* alert */
+
+.alert{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  text-align: center;
+  background-color: #e7e7e7;
+  border:#777;
+  border-radius: 0px;
+  z-index:10000;
+  color:#555;
+}
+
+/* modal */
+.modal-content{
+  border-radius: 0px;
+  text-align: center;
+}
+
+.modal-footer{
+  text-align: center;
+}
+
 /* Global style */
 
 body {
@@ -272,14 +320,6 @@ body > .container {
 }
 
 .selectFilters .dropdown-menu, #select-doubleChart select{
-  /*display: inline-block;*/
-  /*border-color:#e7e7e7;
-  border-radius: 0;
-  border-width: 0 1px 1px 1px;*/
-/*  -webkit-box-shadow: none;
-  box-shadow: none;
-  left: -16px;
-  padding-right: 30px;*/
   font-size: 16px;
   font-weight: 600; 
   color: #633;
@@ -306,16 +346,13 @@ body > .container {
 }
 
 h4{
-  /*border-bottom: 3px solid #e5e5e5;*/
   margin-bottom: 0;
-  /*margin-top: 35px;*/
   padding-bottom: 5px;
 }
 .axis path,
 .axis line {
   fill: none;
   stroke: #CCC;
-  /*stroke-dasharray: 2,2;*/
   shape-rendering: crispEdges;
 }
 
@@ -385,28 +422,6 @@ h4{
 
 #brushing-timeline-container{
   background-color: #FAFAFA;
-}
-
-@media (min-height: 800px) {
-
-.sticky-container-fixed{
-  padding-top: 50px;
-  background-color: #FAFAFA;
-  position: fixed;
-  width: 100%;
-  margin: 0;
-  left: 0;
-  top: 0;
-  z-index: 10;
-  -webkit-box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
-     -moz-box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
-          box-shadow: 0px 3px 4px -3px rgba(0,0,0,0.38);
-}
-
-.sticky-placeholder{
-  height: 150px;
-}
-
 }
 
 #alt-title{
@@ -676,25 +691,6 @@ font-size: 1.1em;
   border-radius: 30px;
 }
 
-/* modal */
-.modal-content{
-  border-radius: 0px;
-  text-align: center;
-}
-
-.modal-footer{
-  text-align: center;
-}
-
-/* alert */
-
-.alert{
-  border:none;
-  border-radius: 0px;
-  margin-bottom: 0px;
-  margin-top: 15px;
-}
-
 /* Page transition */
 .fade-view {
     position: absolute;
@@ -724,13 +720,6 @@ font-size: 1.1em;
     opacity: 0;
 }
 
-/* Scatter Plot */
-#chart {
-  height: 506px;
-}
-/*text {
-  font-size: 10px;
-}*/
 .dot {
   stroke: #000;
 }
@@ -753,12 +742,7 @@ font-size: 1.1em;
 .year.label.active {
   fill: #aaa;
 }
-/*circle.pointTrajectory {
-   pointer-events: none;
-   stroke: lightgray;
-   fill: black;
-   opacity: 0;
-}*/
+
 path.lineTrajectory {
   stroke-width: 2;
   stroke-opacity: .5;
@@ -777,6 +761,7 @@ path.lineTrajectory {
     top: -10px;
     border-radius: 90px;
     font-size: 10px;
+
 }
 
 #partners-histograms-container {
