linechart as directive now

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -197,9 +197,12 @@
 
     
     <div class="col-sm-12">
-      <div  id="linechart-world"  linechart-world></div>
+<!--       <div  id="linechart-world"  linechart-world></div> -->
+      <linechart-world ng-data="linechartData">
+      </linechart-world>
     </div>
     
+
   </div>
 </div>
   <div class="row">
