--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -218,7 +218,7 @@
   <div ng-if="viewTable" class="row table-cont">
     <div class="col-sm-12 grid-cont">
       <div class="gridStyle" ng-grid="gridOptions" >
-        <div class="grid-overlay-msg" ng-show="!gridOptions.data.length && !loading">
+        <div class="grid-overlay-msg" ng-show="loading">
           <div class="msg">
             <span>Loading Data...
             <i class="fa fa-spinner fa-spin"></i></span>
