--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -38,7 +38,11 @@
           raw-start-date="rawMinDate"
           raw-end-date="rawMaxDate"
         ></brushing-timeline> -->
-
+      <div class="legend">
+        <div class="legend-item">
+          <div class="square import"></div> Reportings available to build the curve
+        </div>
+      </div>
         <bar-chart 
           ng-data="nbReportings"
           start-date="selectedMinDate"
