--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,4 +1,26 @@
 <div class="container" >
 	<h1>Projet RICardo</h1>
-	<p>Le projet RICardo vise à construire une base de données commerciales regroupant des statistiques du commerce bilatéral des pays du monde sur la période 1800-1938, et à la mettre en ligne sous forme de visualisations. Commencé en 2004, ce projet a permis de construire une base de 270 000 données (juin 2015) et il est prévu d'ouvrir le site web courant 2016.</p>	
+	<p><strong>Le projet RICardo</strong> vise à construire une base de données commerciales regroupant des statistiques du commerce bilatéral des pays du monde sur la période 1800-1938, et à la mettre en ligne sous forme de visualisations. Commencé en 2004, ce projet a permis de construire une base de 270 000 flux d'échanges commerciaux (juin 2015) et il est prévu d'ouvrir le site web courant 2016.</p>	
+</div>
+<div class="container">
+	<p>Vous trouverez ci-dessous les deux <em>working paper</em> qui ont été soumis pour le premier à la revue <em>Historical Methods</em> et le second à l'<em><a href="http://adho.org/">Alliance of Digital Humanities Organizations</a></em>.</p>
+	<p>Ces papiers ne sont pour le moment pas dans leurs versions finales.</p>
+	<div class="row">
+		<div class="col-md-6">
+			<h2>Abstract DH2016</h2>
+			<ul>
+				<li>
+					<a href="/docs/RICardo_DH2016_fr.pdf">RICardo DH2016 (fr)</a>
+				</li>
+				<li>
+					<a href="/docs/RICardo_DH2016_en.pdf">RICardo DH2016 (en)</a>	
+				</li>	
+			</ul>
+		</div>
+		<div class="col-md-6">
+			<h2>Historical Methods</h2>
+			<a href="/docs/RICardo_HistoricalMethods.pdf">RICardo Historical Methods (en) </a>
+		</div>
+		
+	</div>
 </div>
