--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -10,16 +10,16 @@
 			<h2>Abstract DH2016</h2>
 			<ul>
 				<li>
-					<a href="/docs/RICardo_DH2016_fr.pdf">RICardo DH2016 (fr)</a>
+					<a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_fr.pdf">abstract Ricardo DH 2016 (fr)</a>
 				</li>
 				<li>
-					<a href="/docs/RICardo_DH2016_en.pdf">RICardo DH2016 (en)</a>	
+					<a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_en.pdf">abstract Ricardo DH 2016 (en)</a>	
 				</li>	
 			</ul>
 		</div>
 		<div class="col-md-6">
 			<h2>Historical Methods</h2>
-			<a href="/docs/RICardo_HistoricalMethods.pdf">RICardo Historical Methods (en) </a>
+			<a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Working paper historical methods (en) </a>
 		</div>
 		
 	</div>
