--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -16,8 +16,8 @@
     </div>
   </div>
 </div>
-<div id="sticky-marker"></div>
-<div id="sticky-container">
+<!-- <div id="sticky-marker"></div>
+<div id="sticky-container"> -->
 <div class="container">
 
   <div class="row">
@@ -46,7 +46,7 @@
     </div>
   </div>
 </div>
-</div>
+<!-- </div> -->
 
 <div class="container">
   
