partner histo, bar width size almost ok

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -42,7 +42,11 @@
         <i class="fa fa-info-circle"></i>
 
       </div>
-      <dual-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate" ></dual-timeline>   
+      <dual-timeline 
+        ng-data="timelineData" 
+        start-date="selectedMinDate" 
+        end-date="selectedMaxDate" 
+      ></dual-timeline>   
     </div>
   </div>
 </div>
