--- a/client/css/style.css
+++ b/client/css/style.css
@@ -252,7 +252,7 @@ body > .container {
   -webkit-box-shadow: none;
   box-shadow: none;
   color: #999;
-  min-height: 70px;
+  /*min-height: 70px;*/
 
 }
 #select-lineChart .dropdown {
@@ -315,6 +315,8 @@ body > .container {
   color: #663333;
   background-color: #FAFAFA;
   border-bottom: 1px solid black;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 
@@ -773,12 +775,12 @@ path.lineTrajectory {
 }
 
 .close-btn { 
-    border: 1px solid #c2c2c2;
+    /*border: 1px solid #c2c2c2;*/
     position: relative;
     padding: 1px 5px;
     top: -10px;
-    border-radius: 90px;
-    font-size: 10px;
+    /*border-radius: 90px;*/
+    /*font-size: 10px;*/
 
 }
 
