--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -132,7 +132,10 @@
     <div class="col-sm-8">
       <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with 
       <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
-      <span class="close-btn">X</span>
+      
+      <span class="close-btn">
+        <i class="fa fa-times"></i>
+      </span>
       <span ng-if="!$last">, </span>
       </span>, {{selectedMinDate}} – {{selectedMaxDate}}, in {{actualCurrency}}
       <i class="fa fa-info-circle"></i> </h3>
@@ -158,45 +161,55 @@
   </div>
   <div id="select-lineChart">
     <div>
-      <h3 class="subtitle col-sm-2">select up to 5 partners:</h3>
+      <h3 class="subtitle col-md-2" style="width:190px;">select up to 5 partners:</h3>
     </div>
-    <div class="select-dropdown col-sm-8" ng-show="RICentitiesDD.length">
-      
-      <ui-select  class="selectPartners" ng-model="entities.sourceCountryEntity.selected" theme="bootstrap" ng-show="reportingCountryEntities.length">
-        <match placeholder="Country...">{{$select.selected.RICname}}</match>
+    <div class="select-dropdown col-md-9" ng-show="RICentitiesDD.length">
+    
+    <div class="inline-select" style="padding-top:10px;">
+      <ui-select   ng-model="entities.sourceCountryEntity.selected" theme="bootstrap" ng-show="reportingCountryEntities.length">
+        <match placeholder="Country">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingCountryEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
+    </div>
 
-      <ui-select class="selectPartners" ng-model="entities.sourceColonialEntity.selected" theme="bootstrap" ng-show="reportingColonialEntities.length">
-        <match placeholder="Colonial area...">{{$select.selected.RICname}}</match>
+    <div class="inline-select">
+      <ui-select  ng-model="entities.sourceColonialEntity.selected" theme="bootstrap" ng-show="reportingColonialEntities.length">
+        <match placeholder="Colonial area">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingColonialEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
+    </div>
 
-      <ui-select class="selectPartners" ng-model="entities.sourceGeoEntity.selected" theme="bootstrap" ng-show="reportingGeoEntities.length">
-        <match placeholder="Geographical area...">{{$select.selected.RICname}}</match>
+    <div class="inline-select">
+      <ui-select  ng-model="entities.sourceGeoEntity.selected" theme="bootstrap" ng-show="reportingGeoEntities.length">
+        <match placeholder="Geographical area">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingGeoEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
+    </div>
 
-      <ui-select class="selectPartners" ng-model="entities.sourceContinentEntity.selected" theme="bootstrap" ng-show="reportingContinentEntities.length">
-        <match placeholder="Continent...">{{$select.selected.RICname}}</match>
+    <div class="inline-select">
+      <ui-select  ng-model="entities.sourceContinentEntity.selected" theme="bootstrap" ng-show="reportingContinentEntities.length">
+        <match placeholder="Continent">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingContinentEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
+    </div>
 
-      <ui-select class="selectPartners" ng-model="entities.sourceWorldEntity.selected" theme="bootstrap" ng-show="reportingWorldEntities.length">
-        <match placeholder="World aggregate...">{{$select.selected.RICname}}</match>
+    <div class="inline-select">
+      <ui-select  ng-model="entities.sourceWorldEntity.selected" theme="bootstrap" ng-show="reportingWorldEntities.length">
+        <match placeholder="World aggregate">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingWorldEntities | filter: $select.search">
           <div ng-bind-html="item.RICname | highlight: $select.search"></div>
         </choices>
       </ui-select>
     </div>
+  </div>
     
   <div class="row">
 
