--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -129,7 +129,7 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-md-12">
       <h3 class="subtitle">Trade of {{entities.sourceEntity.selected.RICname}} with 
       <span ng-repeat="elm in reporting" ng-click="removeReporting(elm)" ng-style="{color:elm.color}" >{{elm.RICname}}
       
@@ -145,16 +145,18 @@
          </p>
         </div>
     </div>
-    <div class="col-sm-4" style="float:right">
+  </div>
+  <div class="row">
+    <div class="col-md-12" style="float:right">
       <div class="filter-group">
           <div class="btn-group pull-right">
-            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'total'" uncheckable>total</label>
-            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'imp'" uncheckable>imports</label>
-            <label class="btn btn-sm btn-default" ng-model="yValue" btn-radio="'exp'" uncheckable>exports</label>
+            <label class="btn btnLineChart" ng-model="yValue" btn-radio="'total'" uncheckable>Total</label>
+            <label class="btn btnLineChart" ng-model="yValue" btn-radio="'imp'" uncheckable>Imports</label>
+            <label class="btn btnLineChart" ng-model="yValue" btn-radio="'exp'" uncheckable>Exports</label>
           </div>
           <div class="btn-group pull-right" style="margin-right:30px;">
-            <label class="btn btn-sm btn-default" ng-model="conversion" btn-radio="'sterling'" uncheckable>Sterling</label>
-            <label class="btn btn-sm btn-default" ng-model="conversion" btn-radio="'value'" uncheckable>Percent</label>
+            <label class="btn btnLineChart" ng-model="conversion" btn-radio="'sterling'" uncheckable>Sterling</label>
+            <label class="btn btnLineChart" ng-model="conversion" btn-radio="'value'" uncheckable>Percent</label>
           </div>
       </div>
     </div>
@@ -163,9 +165,9 @@
     <div>
       <h3 class="subtitle col-md-2" style="width:190px;">select up to 5 partners:</h3>
     </div>
-    <div class="select-dropdown col-md-9" ng-show="RICentitiesDD.length">
+    <div class="select-dropdown col-md-9" ng-show="RICentitiesDD.length" style="padding-top:10px;">
     
-    <div class="inline-select" style="padding-top:10px;">
+    <div class="inline-select" >
       <ui-select   ng-model="entities.sourceCountryEntity.selected" theme="bootstrap" ng-show="reportingCountryEntities.length">
         <match placeholder="Country">{{$select.selected.RICname}}</match>
         <choices repeat="item in reportingCountryEntities | filter: $select.search">
