--- a/client/css/style.css
+++ b/client/css/style.css
@@ -809,7 +809,7 @@ path.lineTrajectory {
 
 }
 
-.node {
+/*.node {
   border: solid 1px white;
   font: 10px sans-serif;
   line-height: 12px;
@@ -817,7 +817,27 @@ path.lineTrajectory {
   position: absolute;
   text-indent: 2px;
 }
-
-.lineDateText {
+*/
+/*.lineDateText {
   background-color: red;
+}*/
+
+.node {
+  cursor: pointer;
+}
+
+.node circle {
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font: 10px sans-serif;
+}
+
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
 }
